--- a/src/main/python/config/config.yml
+++ b/src/main/python/config/config.yml
@@ -8,7 +8,6 @@ COMMON: &common
 
   PORT: 5000
 
-  LOG_FILE: app.log
   LOG_LEVEL: DEBUG
 
 #
@@ -19,6 +18,7 @@ DEVELOPMENT: &development
   <<: *common
 
   DEBUG: True
+  LOG_FILE: ../../../app.log
 
 #
 # Prod
@@ -28,3 +28,4 @@ PRODUCTION: &production
   <<: *common
 
   PROD: True
+  LOG_FILE: /home/demo/app.log
