--- a/bower.json
+++ b/bower.json
@@ -19,10 +19,10 @@
     "tests"
   ],
   "devDependencies": {
-    "angular-route": "~1.4.3",
     "angular": "~1.4.3",
     "jquery": "~2.1.4",
     "d3": "~3.5.6",
-    "requirejs": "~2.1.19"
+    "requirejs": "~2.1.19",
+    "angular-ui-router": "~0.2.15"
   }
 }
