--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "bower": "^1.4.1",
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "grunt-nose": "^0.4.0"
   }
 }
