--- a/bower.json
+++ b/bower.json
@@ -20,9 +20,7 @@
   ],
   "devDependencies": {
     "angular": "~1.4.3",
+    "angular-ui-router": "~0.2.15",
     "jquery": "~2.1.4",
-    "d3": "~3.5.6",
-    "requirejs": "~2.1.19",
-    "angular-ui-router": "~0.2.15"
-  }
+    "requirejs": "~2.1.19"
 }
