--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+#
+# ./tools/python/bin/pip install --upgrade -r requirements.txt
+# ./tools/python/bin/pip list
+#
+
 # Testing
 mock
 nose
@@ -13,7 +18,3 @@ requests
 Flask
 Flask-Injector
 flask-environments
-flask-socketio
-
-# Third-party
-py2neo
